# NLP_emotion_detection

./: .gitignore  Emotion pipeline Presentation.pptx  README.md  Y2A_model_iteration_log.xlsx  data_iterations.md
nlp_cia/: README.md  output_clean_tfidf.xlsx  output_filtered_tfidf.xlsx  output_numerical_tfidf.xlsx  pyproject.toml  sentences.csv
nlp_cia/Task 10/: XAI_Analysis.md  XAI_notebook.ipynb
nlp_cia/Task 7/: machine_translation.ipynb
nlp_cia/Task 7/logs/: events.out.tfevents.1759407788.JeBr.18508.1
nlp_cia/Task 7/mt/: config.json  generation_config.json
nlp_cia/Task 7/mt/checkpoint-313/: rng_state.pth  scheduler.pt  trainer_state.json
nlp_cia/Task 8/: New Baseline (Llama 3.3).ipynb  Prompt_EngineeringV3.ipynb  prompt_engineering.py  test_improved_with_predictions.xlsx
nlp_cia/data/: group_4_url_1_transcript.csv  wie_is_de_mol_sentiment.csv
nlp_cia/src/: NLP_features.ipynb  RNN.py  assembly.py  data_quality_report.ipynb  feature_extraction.py  machine_translation.py  multimodalfusion.py  multivariate_lstm.py  pipeline large font  pipeline.drawio  pipeline.py  preprocess_model_iter.ipynb  preprocessing.py  sentiment_analysis_eval.py  sentiment_analysis_train.py  transformers_.py  utils.py  whisper.py
nlp_cia/task 11/: model card.md
nlp_cia/task 6/: LSTM.ipynb  Logistic.ipynb  RNN.ipynb  SVM.ipynb  go_emotions_v2.xlsx  naive.ipynb  pretrained_transformer_model.ipynb  test_improved.xlsx  test_improved_with_predictions.xlsx
nlp_cia/task 6/finetuned-emotion-model/checkpoint-2714/: rng_state.pth  scaler.pt  scheduler.pt  trainer_state.json
nlp_cia/task 6/finetuned-emotion-model/checkpoint-5428/: rng_state.pth  (+3 more)
nlp_cia/task 9/: error_analysis_fine_tuned_pretrained_transformer_model.md
nlp_cia/task_9/: error_analysis_fine_tuned_pretrained_transformer_model.md
(+34 files in other folders)
