[project]
name = "nlp-cia"
version = "0.1.0"
description = ""
authors = [
    {name = "Nick Belterman 225538",email = "Nick.belterman@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "moviepy (==1.0.3)",
    "whisper (>=1.1.10,<2.0.0)",
    "openai-whisper (>=20250625,<20250626)",
    "transformers[torch] (>=4.56.1,<5.0.0)",
    "datasets (>=4.0.0,<5.0.0)",
    "tensorflow (>=2.20.0,<3.0.0)",
    "plotly (>=6.3.0,<7.0.0)",
    "tf-keras (>=2.20.1,<3.0.0)",
    "beautifulsoup4 (>=4.13.5,<5.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
]

[tool.poetry]
packages = [{include = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
